# amber-bridge

./: .gitignore  CHANGELOG.md  README.md  commitlint.config.js  meson.build  meson_options.txt  package-lock.json  package.json
data/: com.paysonwallach.amber.bridge.json
host-connector/: meson.build
host-connector/src/: BrowserProxy.vala  HostConnector.vala  HostConnectorBusServer.vala  Main.vala  Serializable.vala
meson/: post_install.py
meta/: README.md.njk
opener/: meson.build
opener/data/: ambr.xml
opener/src/: Main.vala
scripts/: build.js
src/: ExtensionProxy.vala  Main.vala  Protocol.vala
src/Utils/: Filename.vala  Serializable.vala
subprojects/: nativefiledialog-extended.wrap
vapi/: config.vapi  nfd.vapi
